--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "eslint-loader": "^2.1.2",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
-    "vue-mq": "^1.0.1"
+    "vue-draggable-resizable": "^2.1.0",
+    "vue-mq": "^1.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
@@ -30,8 +33,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/base"
     ],
     "rules": {},
     "parserOptions": {
